--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -581,6 +581,7 @@
     <Content Include="Deploy\Install\Sql\set-initial-data.sql" />
     <Content Include="Deploy\Install\Sql\create-sp-restore-db.sql" />
     <None Include="Deploy\Install\restore-db.ps1" />
+    <Content Include="Deploy\testing.txt" />
     <Content Include="Deploy\Update\Plan.txt" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
@@ -598,9 +599,8 @@
     <Content Include="App_Code\Helpers.cshtml" />
     <Content Include="Deploy\Install\backup-db.ps1" />
     <Content Include="Deploy\Install\Sql\init-db.ps1" />
-    <Content Include="Deploy\Install\backup-db-alicargo.ps1" />
+    <Content Include="Deploy\backup-db-alicargo_1_1.ps1" />
     <Content Include="Deploy\Update\prepare.ps1" />
-    <Content Include="Deploy\Update\tools.ps1" />
     <None Include="Scripts\jquery-2.0.3.intellisense.js" />
     <Content Include="Scripts\jquery-2.0.3.js" />
     <Content Include="Scripts\jquery-2.0.3.min.js" />
