--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0"?>
-	<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+<configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<connectionStrings>
 		<add  xdt:Transform="SetAttributes" xdt:Locator="Match(name)" name="MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_1_1;Integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<system.net>
 		<mailSettings xdt:Transform="Replace">
-			<!--<smtp deliveryMethod="Network" from="robot@alicargo.ru">
+			<smtp deliveryMethod="Network" from="robot@alicargo.ru">
 				<network host="smtp.gmail.com" enableSsl="true"	userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
-			</smtp>-->
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
+			<!--<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Alicargo_1_1\Mails" />
+			</smtp>-->
 		</mailSettings>
 	</system.net>
 	<system.web>
