--- a/Alicargo.DataAccess.BlackBox.Tests/App.config
+++ b/Alicargo.DataAccess.BlackBox.Tests/App.config
@@ -1,9 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString"
-      connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
+    <add name="Alicargo.DataAccess.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\;Initial Catalog=Alicargo;Integrated Security=True" />
   </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1309.801" newVersion="4.1.1309.801" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.6.8.0" newVersion="3.6.8.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
