--- a/Alicargo/Views/Web.config
+++ b/Alicargo/Views/Web.config
@@ -20,7 +20,7 @@
 				<add namespace="Alicargo.ViewModels"/>
 				<add namespace="Alicargo.ViewModels.Application"/>
 				<add namespace="Alicargo.Core.Enums"/>
-				<add namespace="Alicargo.Helpers"/>
+				<add namespace="Alicargo.MvcHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
