--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -1464,6 +1464,7 @@
     <Content Include="Views\SenderAwb\Create.cshtml" />
     <Content Include="Views\Calculation\Index.cshtml" />
     <Content Include="Views\DynamicScript\States.cshtml" />
+    <Content Include="Views\Calculation\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
