--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -23,7 +23,7 @@
 	</connectionStrings>
 	<system.net>
 		<mailSettings>
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@alicargo.ru">
 				<specifiedPickupDirectory pickupDirectoryLocation="D:\S\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
 		</mailSettings>
