new version of calculation girg

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -340,6 +340,8 @@
     <Compile Include="ViewModels\AirWaybill\AwbSenderModel.cs" />
     <Compile Include="ViewModels\Application\ApplicationGroup.cs" />
     <Compile Include="ViewModels\Application\ApplicationListItem.cs" />
+    <Compile Include="ViewModels\Calculation\CalculationGroup.cs" />
+    <Compile Include="ViewModels\Calculation\CalculationListCollection.cs" />
     <Compile Include="ViewModels\DynamicScriptMethodDescription.cs" />
     <Compile Include="ViewModels\Helpers\ApplicationModelHelper.cs" />
     <Compile Include="ViewModels\Application\ApplicationSenderModel.cs" />
@@ -603,8 +605,10 @@
     <Content Include="Scripts\app\Alicargo.js" />
     <Content Include="Scripts\app\Application\Columns.js" />
     <Content Include="Scripts\app\Application\Grid.js" />
-    <Content Include="Scripts\app\Calculation\Details.js" />
+    <Content Include="Scripts\app\Calculation\Columns.js" />
     <Content Include="Scripts\app\Calculation\Grid.js" />
+    <Content Include="Scripts\app\Calculation\Details-old.js" />
+    <Content Include="Scripts\app\Calculation\Grid-old.js" />
     <Content Include="Scripts\app\Client\Grid.js" />
     <Content Include="Scripts\app\Common.js" />
     <Content Include="Scripts\app\it.js" />
