--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -268,10 +268,13 @@
     <Compile Include="Services\Email\ClientManagerWithMailing.cs" />
     <Compile Include="Services\Abstract\IClientPresenter.cs" />
     <Compile Include="Services\Email\AwbManagerWithMailing.cs" />
+    <Compile Include="Services\Excel\AdminApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\ApplicationExcelRow.cs" />
     <Compile Include="Services\Excel\ApplicationExcelRowSource.cs" />
     <Compile Include="Services\Excel\ExcelGenerator.cs" />
     <Compile Include="Services\Abstract\IApplicationExcelRowSource.cs" />
+    <Compile Include="Services\Excel\ForwarderApplicationExcelRow.cs" />
+    <Compile Include="Services\Excel\SenderApplicationExcelRow.cs" />
     <Compile Include="Services\LocalizationService.cs" />
     <Compile Include="Services\AirWaybill\AwbUpdateManager.cs" />
     <Compile Include="Services\Contract\Message.cs" />
