--- a/Alicargo.TestHelpers/packages.config
+++ b/Alicargo.TestHelpers/packages.config
@@ -5,4 +5,5 @@
   <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
   <package id="Moq" version="4.1.1309.0801" targetFramework="net45" />
+  <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
